# configs

./: .Xresources  .emacs  .ghcid  .iex.exs  .ocamlformat  .tmux.conf  Pycharm.xml  XWin copy.xml  build.sbt  coc-settings.json  dash-to-panel.rc  default.nix  defaults-8.10.cabal  defaults-8.6.cabal  defaults-8.6.yaml  defaults-rpp.cabal  defaults.cabal  defaults.yaml  ghci.conf  i3-config  init-hls.vim  init-minimal.vim  init.vim  keybindings.json  mint_import_into_compiz_config.profile  redshift.conf  settings.json  startup.jl  talon.desktop  vimium-options.json  vscode-extensions.txt
nixos/: .Xresources  config  configuration.nix  packages.nix  system.nix  users.nix  xserver.nix
snippets/: c.json  haskell.json  include_guard.code-snippets  ocaml.json  sml.json
