common exts
  default-extensions: BangPatterns
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DefaultSignatures
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DerivingStrategies
                    , DerivingVia
                    , DuplicateRecordFields
                    , EmptyCase
                    , ExistentialQuantification
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , ImplicitParams
                    , InstanceSigs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NumericUnderscores
                    , OverloadedLabels
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuantifiedConstraints
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , StandaloneKindSignatures
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , TypeOperators
                    , UnliftedNewtypes

common opts
  ghc-options: -Wall
               -Werror
               -Wcompat
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -Wredundant-record-wildcards
               -Wunused-packages
               -Wunused-record-wildcards
               -fshow-hole-constraints
               -haddock
